# Travel-Agency

./: .env.example  .env.test  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api_pre_start.py  docker-compose.yml  docker-entrypoint.sh  dockerignore  pyproject.toml  rabbitmq.conf  tests-start.sh  tests_pre_start.py
.github/: pull_request_commit.md
.github/workflows/: lint.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2024_03_24_1223-646ed9779614_add_user.py  2025_02_21_2148-e55a8dcabdc0_add_cities.py  2025_02_24_1409-d87726c0beb2_populate_cities.py
app/: custom_logging.py  main.py
app/auth/api/: endpoints.py  routers.py
app/auth/exceptions/: invalid_credentials_exception.py
app/auth/schemas/: auth_schema.py  token_schema.py
app/auth/services/: auth_service.py
app/auth/use_cases/: auth_user_use_case.py
app/auth/utils/: security.py  set_http_only_cookie.py
app/celery/: celery_settings.py  start-celery-worker.sh
app/celery/tasks/: emails.py
app/cities/api/: endpoints.py  routers.py
app/cities/models/: city.py
app/cities/repositories/: cities_repository.py
app/cities/schemas/: city_schema.py
app/cities/services/: cities_service.py
app/cities/use_cases/: create_city_use_case.py  delete_city_use_case.py  get_city_use_case.py  list_cities_use_case.py  update_city_use_case.py
app/common/api/: endpoints.py  routers.py
app/common/clients/: base_email_client.py  example_email_client.py
app/common/email_templates/: welcome_email.html
app/common/exceptions/: email_client_exception.py  external_provider_exception.py  model_not_created_exception.py  model_not_found_exception.py
app/core/: config.py
app/db/: base.py  session.py
scripts/: format.sh  generate_migrations.sh  test.sh
tests/: conftest.py
tests/utils/: create_user.py
(+18 files in other folders)
