[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = ""
authors = ["Dan Tche <dtcheche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
uvicorn = "^0.27.1"
pydantic-settings = "^2.1.0"
tenacity = "^8.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2024.1"
python-multipart = "^0.0.9"
httpx = "^0.27.2"
structlog = "^24.1.0"
asgi-correlation-id = "^4.3.1"
structlog-sentry = "^2.1.0"
slowapi = "^0.1.9"
celery = "^5.4.0"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.12.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version="3.12"
disallow_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
follow_imports = "skip"
exclude = [
    "tests.*",
    "app.factories.*",
    "app.commands.*",
    "app.core.*",
    "app.common.schemas.pagination_schema.py",
    "app.main.py",
    "alembic.env.py",
    "app.custom_logging.py",
    "app.common.models.base_class.py"
]


[tool.ruff]
line-length = 79
exclude = [
    "__init__.py",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

ignore = ["E501", "B008", "B904", "B012", "B024"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
omit = [
    "app/db/*",
    "app/commands/*",
    "app/exceptions/*"
]